--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -216,4 +216,8 @@
     <string name="account_partner">Tài khoản đối tác</string>
     <string name="mess_close">Bạn có muốn khóa?</string>
     <string name="account_lock">Tài khoản của bạn đã bị khóa.</string>
+    <string name="add_blog">Thêm blog</string>
+    <string name="blog_title">Nhập tiêu đề của blog</string>
+    <string name="blog_content">Nhập mô tả của blog</string>
+    <string name="blog_url">Nhập đường dẫn của blog</string>
 </resources>
