--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -220,4 +220,5 @@
     <string name="blog_title">Nhập tiêu đề của blog</string>
     <string name="blog_content">Nhập mô tả của blog</string>
     <string name="blog_url">Nhập đường dẫn của blog</string>
+    <string name="video">Video</string>
 </resources>
