--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -221,4 +221,5 @@
     <string name="blog_content">Nhập mô tả của blog</string>
     <string name="blog_url">Nhập đường dẫn của blog</string>
     <string name="video">Video</string>
+    <string name="empty_list">Danh sách trống</string>
 </resources>
