--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -226,4 +226,6 @@
     <string name="blog_url">Enter Blog\'s url</string>
     <string name="video">Video</string>
     <string name="empty_list">Empty list</string>
+    <string name="more_1">More</string>
+    <string name="res_close">This restaurant is closed, please order tomorrow, thanks!!</string>
 </resources>
