--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -228,4 +228,10 @@
     <string name="empty_list">Empty list</string>
     <string name="more_1">More</string>
     <string name="res_close">This restaurant is closed, please order tomorrow, thanks!!</string>
+    <string name="chart_order">Order statistics</string>
+    <string name="order_by_month">Statistics by month</string>
+    <string name="order_by_day">Statistics by day</string>
+    <string name="year">Year</string>
+    <string name="month">Month</string>
+    <string name="show">Show</string>
 </resources>
