--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -223,5 +223,11 @@
     <string name="video">Video</string>
     <string name="empty_list">Danh sách trống</string>
     <string name="more_1">Xem thêm</string>
-    <string name="res_close">Cuarwhangf này đã đóng cửa, vui lòng đặt hàng vào ngày mai, cảm ơn!</string>
+    <string name="res_close">Cửa hàng này đã đóng cửa, vui lòng đặt hàng vào ngày mai, cảm ơn!</string>
+    <string name="chart_order">Thống kê đơn hàng</string>
+    <string name="order_by_month">Thống theo tháng</string>
+    <string name="order_by_day">Thống kê theo ngày</string>
+    <string name="year">Năm</string>
+    <string name="month">Tháng</string>
+    <string name="show">Xem</string>
 </resources>
