--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -225,8 +225,8 @@
     <string name="more_1">Xem thêm</string>
     <string name="res_close">Cửa hàng này đã đóng cửa, vui lòng đặt hàng vào ngày mai, cảm ơn!</string>
     <string name="chart_order">Thống kê đơn hàng</string>
-    <string name="order_by_month">Thống theo tháng</string>
-    <string name="order_by_day">Thống kê theo ngày</string>
+    <string name="order_by_month">* Thống theo tháng</string>
+    <string name="order_by_day">* Thống kê theo ngày</string>
     <string name="year">Năm</string>
     <string name="month">Tháng</string>
     <string name="show">Xem</string>
