--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -234,4 +234,10 @@
     <string name="year">Year</string>
     <string name="month">Month</string>
     <string name="show">Show</string>
+    <string name="total_res">Total Restaurant</string>
+    <string name="total_ac">Total Account</string>
+    <string name="total_blog">Total Blog</string>
+    <string name="active">*Activated</string>
+    <string name="nt_acvtive">*Not activated</string>
+    <string name="detail">Detail</string>
 </resources>
