--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -247,4 +247,6 @@
     <string name="please_wait">Please waiting…</string>
     <string name="mess_press">Tap to change the next status of this order</string>
     <string name="send_code_again">Send code again </string>
+    <string name="new_order">New Order</string>
+    <string name="receive_order">Your restaurant received new orders!</string>
 </resources>
