--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Yummy</string>
     <string name="Your_API_KEY" translatable="false">AIzaSyB9v2vE1hC-ojehepfnkcCSwBp6BLVTsN4</string>
+    <string name="api_key_map" translatable="false">AIzaSyC0pWEQijgfqgJecVJVMaF6a1wXpUgmj78</string>
     <string name="welcome">Welcome to Yummy</string>
     <string name="loading">Loading…</string>
     <string name="home">Home</string>
