--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -11,6 +11,8 @@
     <string name="cake">Bánh</string>
     <string name="change_lang">Thay đổi ngôn ngữ</string>
     <string name="city">Tỉnh/thành phố</string>
+    <string name="distinct">Quận/huyện</string>
+    <string name="all">Tất cả</string>
     <string name="close">ĐÓNG CỬA</string>
     <string name="comment">Bình luận</string>
     <string name="confirm_pass">Nhập lại mật khẩu</string>
@@ -182,7 +184,7 @@
     <string name="max_discount">Giá giảm tối đa</string>
     <string name="min_order">Giá đặt tối thiểu</string>
     <string name="add_branch">Thêm chi nhánh</string>
-    <string name="address_branch">Nhập địa chỉ</string>
+    <string name="address_branch">Vui lòng nhập địa chỉ đầy đủ</string>
     <string name="twice_exit">Nhấp thêm lần nữa để thoát!</string>
     <string name="date">Ngày đặt</string>
     <string name="mess_change_status">Bạn có chắc chắn chuyển đến giai đoạn tiếp theo của đơn hàng?</string>
