--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -248,4 +248,5 @@
     <string name="send_code_again">Gửi lại mã code</string>
     <string name="new_order">Đơn hàng mới</string>
     <string name="receive_order">Cửa hàng của bạn nhận được đơn hàng mới!</string>
+    <string name="your_location">Vị trí của bạn</string>
 </resources>
