--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -249,4 +249,6 @@
     <string name="new_order">Đơn hàng mới</string>
     <string name="receive_order">Cửa hàng của bạn nhận được đơn hàng mới!</string>
     <string name="your_location">Vị trí của bạn</string>
+    <string name="reset_pass">Vui lòng nhập Email vào ô bên dưới, chúng tôi sẽ gửi mật khẩu mới vào hộp thư của bạn</string>
+    <string name="search_res">Tìm kiếm tên quán ăn, địa chỉ quán</string>
 </resources>
