--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -251,4 +251,5 @@
     <string name="your_location">Vị trí của bạn</string>
     <string name="reset_pass">Vui lòng nhập Email vào ô bên dưới, chúng tôi sẽ gửi mật khẩu mới vào hộp thư của bạn</string>
     <string name="search_res">Tìm kiếm tên quán ăn, địa chỉ quán</string>
+    <string name="send">Gửi</string>
 </resources>
