--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -256,4 +256,5 @@
     <string name="new_order">New Order</string>
     <string name="your_location">Your Location</string>
     <string name="receive_order">Your restaurant received new orders!</string>
+    <string name="send">Send</string>
 </resources>
