--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -253,4 +253,5 @@
     <string name="search_res">Tìm kiếm tên quán ăn, địa chỉ quán</string>
     <string name="send">Gửi</string>
     <string name="error_pess">Một vài quyền bị từ chối.</string>
+    <string name="some_error">Xuất hiện một số lỗi khi upload.</string>
 </resources>
