--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -258,4 +258,5 @@
     <string name="receive_order">Your restaurant received new orders!</string>
     <string name="send">Send</string>
     <string name="error_pess">Some permissions are denied</string>
+    <string name="some_error">An unknown error has occurred.</string>
 </resources>
